--- a/cuda-7.5/Dockerfile
+++ b/cuda-7.5/Dockerfile
@@ -57,6 +57,9 @@ RUN sudo apt-get update \
  && sudo apt-get install -y --no-install-recommends libx11-6 \
  && sudo rm -rf /var/lib/apt/lists/*
 
+# Install Torchnet
+RUN pip install git+https://github.com/pytorch/tnt.git@master
+
 # CUDA 7.5-specific steps
 RUN conda install -y --name pytorch-py36 -c soumith \
     magma-cuda75 \
