--- a/cuda-8.0/Dockerfile
+++ b/cuda-8.0/Dockerfile
@@ -69,7 +69,13 @@ RUN sudo apt-get update && sudo apt-get install -y --no-install-recommends \
     libgtk2.0-0 \
     libcanberra-gtk-module \
  && sudo rm -rf /var/lib/apt/lists/*
-RUN conda install -y --name pytorch-py36 -c menpo opencv3
+RUN conda install -y --name pytorch-py36 -c menpo opencv3 \
+ && conda clean -ya
+
+# Install Graphviz
+RUN conda install -y --name pytorch-py36 graphviz=2.38.0 \
+ && conda clean -ya
+RUN pip install graphviz
 
 # CUDA 8.0-specific steps
 RUN conda install -y --name pytorch-py36 -c soumith \
