--- a/cuda-8.0/Dockerfile
+++ b/cuda-8.0/Dockerfile
@@ -1,4 +1,4 @@
-FROM nvidia/cuda:8.0-cudnn5-devel
+FROM nvidia/cuda:8.0-runtime-ubuntu16.04
 
 # Install some basic utilities
 RUN apt-get update && apt-get install -y \
@@ -45,14 +45,11 @@ ENV CONDA_AUTO_UPDATE_CONDA=false
 RUN conda install -y "conda>=4.4.11" && conda clean -ya
 
 # CUDA 8.0-specific steps
-RUN conda install -y --name pytorch-py36 -c soumith \
-    magma-cuda80 \
- && conda clean -ya
-
-# Install PyTorch and Torchvision
 RUN conda install -y -c pytorch \
-    pytorch=0.3.1 \
-    torchvision=0.2.0 \
+    cuda80=1.0 \
+    magma-cuda80=2.3.0 \
+    pytorch=0.4.0 \
+    torchvision=0.2.1 \
  && conda clean -ya
 
 # Install HDF5 Python bindings
