--- a/cuda-9.1/Dockerfile
+++ b/cuda-9.1/Dockerfile
@@ -65,6 +65,9 @@ RUN conda install -y graphviz=2.38.0 \
  && conda clean -ya
 RUN pip install graphviz
 
+ADD /requirements.txt /app/
+RUN pip install -r requirements.txt
+
 # Install OpenCV3 Python bindings
 RUN sudo apt-get update && sudo apt-get install -y --no-install-recommends \
     libgtk2.0-0 \
