add requirments.txt file to all folders

--- a/cuda-9.1/Dockerfile
+++ b/cuda-9.1/Dockerfile
@@ -8,7 +8,7 @@ RUN apt-get update && apt-get install -y \
     git \
     bzip2 \
     libx11-6 \
- && rm -rf /var/lib/apt/lists/*
+    && rm -rf /var/lib/apt/lists/*
 
 # Create a working directory
 RUN mkdir /app
@@ -16,7 +16,7 @@ WORKDIR /app
 
 # Create a non-root user and switch to it
 RUN adduser --disabled-password --gecos '' --shell /bin/bash user \
- && chown -R user:user /app
+    && chown -R user:user /app
 RUN echo "user ALL=(ALL) NOPASSWD:ALL" > /etc/sudoers.d/90-user
 USER user
 
@@ -26,16 +26,16 @@ RUN chmod 777 /home/user
 
 # Install Miniconda
 RUN curl -so ~/miniconda.sh https://repo.continuum.io/miniconda/Miniconda3-4.5.1-Linux-x86_64.sh \
- && chmod +x ~/miniconda.sh \
- && ~/miniconda.sh -b -p ~/miniconda \
- && rm ~/miniconda.sh
+    && chmod +x ~/miniconda.sh \
+    && ~/miniconda.sh -b -p ~/miniconda \
+    && rm ~/miniconda.sh
 ENV PATH=/home/user/miniconda/bin:$PATH
 ENV CONDA_AUTO_UPDATE_CONDA=false
 
 # Create a Python 3.6 environment
 RUN /home/user/miniconda/bin/conda install conda-build \
- && /home/user/miniconda/bin/conda create -y --name py36 python=3.6.5 \
- && /home/user/miniconda/bin/conda clean -ya
+    && /home/user/miniconda/bin/conda create -y --name py36 python=3.6.5 \
+    && /home/user/miniconda/bin/conda clean -ya
 ENV CONDA_DEFAULT_ENV=py36
 ENV CONDA_PREFIX=/home/user/miniconda/envs/$CONDA_DEFAULT_ENV
 ENV PATH=$CONDA_PREFIX/bin:$PATH
@@ -46,12 +46,12 @@ RUN conda install -y -c pytorch \
     magma-cuda91=2.3.0 \
     pytorch=0.4.0 \
     torchvision=0.2.1 \
- && conda clean -ya
+    && conda clean -ya
 
 # Install HDF5 Python bindings
 RUN conda install -y \
     h5py \
- && conda clean -ya
+    && conda clean -ya
 RUN pip install h5py-cache
 
 # Install Torchnet, a high-level framework for PyTorch
@@ -62,9 +62,10 @@ RUN conda install -y requests && conda clean -ya
 
 # Install Graphviz
 RUN conda install -y graphviz=2.38.0 \
- && conda clean -ya
+    && conda clean -ya
 RUN pip install graphviz
 
+# Copy the requirement file to the continer 
 ADD /requirements.txt /app/
 RUN pip install -r requirements.txt
 
@@ -72,9 +73,9 @@ RUN pip install -r requirements.txt
 RUN sudo apt-get update && sudo apt-get install -y --no-install-recommends \
     libgtk2.0-0 \
     libcanberra-gtk-module \
- && sudo rm -rf /var/lib/apt/lists/*
+    && sudo rm -rf /var/lib/apt/lists/*
 RUN conda install -y -c menpo opencv3 \
- && conda clean -ya
+    && conda clean -ya
 
 # Set the default command to python3
 CMD ["python3"]
