--- a/no-cuda/Dockerfile
+++ b/no-cuda/Dockerfile
@@ -33,18 +33,20 @@ ENV PATH=/home/user/miniconda/bin:$PATH
 ENV CONDA_AUTO_UPDATE_CONDA=false
 
 # Create a Python 3.6 environment
-RUN /home/user/miniconda/bin/conda install conda-build \
- && /home/user/miniconda/bin/conda create -y --name py36 python=3.6.5 \
+RUN /home/user/miniconda/bin/conda create -y --name py36 python=3.6.9 \
  && /home/user/miniconda/bin/conda clean -ya
 ENV CONDA_DEFAULT_ENV=py36
 ENV CONDA_PREFIX=/home/user/miniconda/envs/$CONDA_DEFAULT_ENV
 ENV PATH=$CONDA_PREFIX/bin:$PATH
+RUN /home/user/miniconda/bin/conda install conda-build=3.18.9=py36_3 \
+ && /home/user/miniconda/bin/conda clean -ya
 
 # No CUDA-specific steps
 ENV NO_CUDA=1
 RUN conda install -y -c pytorch \
-    pytorch-cpu=1.0.0 \
-    torchvision-cpu=0.2.1 \
+    cpuonly \
+    "pytorch=1.2.0=py3.6_cpu_0" \
+    "torchvision=0.4.0=py36_cpu" \
  && conda clean -ya
 
 # Install HDF5 Python bindings
@@ -60,9 +62,8 @@ RUN conda install -y requests=2.19.1 \
  && conda clean -ya
 
 # Install Graphviz
-RUN conda install -y graphviz=2.38.0 \
+RUN conda install -y graphviz=2.40.1 python-graphviz=0.8.4 \
  && conda clean -ya
-RUN pip install graphviz==0.8.4
 
 # Install OpenCV3 Python bindings
 RUN sudo apt-get update && sudo apt-get install -y --no-install-recommends \
