Add checkout step to actions

--- a/.github/workflows/publish_1.4.0-nocuda-ubuntu16.04.yml
+++ b/.github/workflows/publish_1.4.0-nocuda-ubuntu16.04.yml
@@ -7,6 +7,7 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v2
     - uses: docker/build-push-action@v1
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
