--- a/images.yml
+++ b/images.yml
@@ -30,6 +30,7 @@
          && conda clean -ya
 
 1.5.0-cuda10.2-ubuntu18.04:
+  deprecated: true
   extra_tags:
   - 1.5.0-cuda10.2
   template:
@@ -45,6 +46,7 @@
          && conda clean -ya
 
 1.5.0-cuda9.2-ubuntu18.04:
+  deprecated: true
   extra_tags:
   - 1.5.0-cuda9.2
   template:
@@ -60,6 +62,7 @@
          && conda clean -ya
 
 1.5.0-nocuda-ubuntu18.04:
+  deprecated: true
   extra_tags:
   - 1.5.0-nocuda
   template:
