--- a/dockerfiles/1.10.2-nocuda-ubuntu20.04/Dockerfile
+++ b/dockerfiles/1.10.2-nocuda-ubuntu20.04/Dockerfile
@@ -1,4 +1,4 @@
-FROM nvidia/cuda:11.3.1-base-ubuntu20.04
+FROM ubuntu:20.04
 
 # Install some basic utilities
 RUN apt-get update && apt-get install -y \
