--- a/.github/workflows/publish_1.7.0-cuda11.0-ubuntu20.04.yml
+++ b/.github/workflows/publish_1.7.0-cuda11.0-ubuntu20.04.yml
@@ -7,6 +7,7 @@ on:
     paths:
     - dockerfiles/1.7.0-cuda11.0-ubuntu20.04/*
     - .github/workflows/publish_1.7.0-cuda11.0-ubuntu20.04.yml
+  workflow_dispatch:
 
 jobs:
   publish:
