--- a/dockerfiles/1.8.1-cuda11.1-ubuntu20.04/Dockerfile
+++ b/dockerfiles/1.8.1-cuda11.1-ubuntu20.04/Dockerfile
@@ -1,5 +1,8 @@
 FROM nvidia/cuda:11.1.1-base-ubuntu20.04
 
+# Remove any third-party apt sources to avoid issues with expiring keys.
+RUN rm -f /etc/apt/sources.list.d/*.list
+
 # Install some basic utilities
 RUN apt-get update && apt-get install -y \
     curl \
