--- a/.github/workflows/publish_1.13.0-nocuda-ubuntu22.04.yml
+++ b/.github/workflows/publish_1.13.0-nocuda-ubuntu22.04.yml
@@ -1,12 +1,12 @@
-name: Publish anibali/pytorch:1.7.0-cuda11.0-ubuntu20.04
+name: Publish anibali/pytorch:1.13.0-nocuda-ubuntu22.04
 
 on:
   push:
     branches:
     - master
     paths:
-    - dockerfiles/1.7.0-cuda11.0-ubuntu20.04/*
-    - .github/workflows/publish_1.7.0-cuda11.0-ubuntu20.04.yml
+    - dockerfiles/1.13.0-nocuda-ubuntu22.04/*
+    - .github/workflows/publish_1.13.0-nocuda-ubuntu22.04.yml
   workflow_dispatch:
 
 jobs:
@@ -19,5 +19,5 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
         repository: anibali/pytorch
-        tags: 1.7.0-cuda11.0-ubuntu20.04,1.7.0-cuda11.0
-        path: dockerfiles/1.7.0-cuda11.0-ubuntu20.04
+        tags: 1.13.0-nocuda-ubuntu22.04,1.13.0-nocuda
+        path: dockerfiles/1.13.0-nocuda-ubuntu22.04
