--- a/images.yml
+++ b/images.yml
@@ -1,7 +1,48 @@
+2.0.0-cuda11.8-ubuntu22.04:
+  extra_tags:
+  - 2.0.0-cuda11.8
+  - latest
+  template:
+    path: templates/20221212.dockerfile.jinja2
+    vars:
+      base_image: nvidia/cuda:11.8.0-base-ubuntu22.04
+    conda_channels:
+      - conda-forge
+      - nvidia
+      - nodefaults
+    conda_dependencies:
+      - mamba=1.3.1
+      - pip=23.0.1
+      - python=3.10.9
+      - pytorch::pytorch=2.0.0
+      - pytorch::pytorch-cuda=11.8
+      - scipy=1.10.1
+      - pytorch::torchvision=0.15.0
+      - tqdm=4.65.0
+
+2.0.0-nocuda-ubuntu22.04:
+  extra_tags:
+  - 2.0.0-nocuda
+  template:
+    path: templates/20221212.dockerfile.jinja2
+    vars:
+      base_image: ubuntu:22.04
+    conda_channels:
+      - conda-forge
+      - nodefaults
+    conda_dependencies:
+      - pytorch::cpuonly
+      - mamba=1.3.1
+      - pip=23.0.1
+      - python=3.10.9
+      - pytorch::pytorch=2.0.0
+      - scipy=1.10.1
+      - pytorch::torchvision=0.15.0
+      - tqdm=4.65.0
+
 1.13.0-cuda11.8-ubuntu22.04:
   extra_tags:
   - 1.13.0-cuda11.8
-  - latest
   template:
     path: templates/20221212.dockerfile.jinja2
     vars:
