--- a/images.yml
+++ b/images.yml
@@ -6,6 +6,9 @@
     path: templates/20221212.dockerfile.jinja2
     vars:
       base_image: nvidia/cuda:11.8.0-base-ubuntu22.04
+      post_conda_steps: |
+        # Fix for https://github.com/pytorch/pytorch/issues/97041
+        RUN ln -s "$CONDA_PREFIX/lib/libnvrtc.so.11.8.89" "$CONDA_PREFIX/lib/libnvrtc.so"
     conda_channels:
       - conda-forge
       - nvidia
